@@ -1,28 +1,19 @@
 package com.urlshortener.service;
 
-import com.urlshortener.entity.ClickAnalytics;
-import com.urlshortener.repository.ClickAnalyticsRepository;
-import com.urlshortener.util.UserAgentParser;
-import org.springframework.scheduling.annotation.Async;
-import org.springframework.stereotype.Component;
-
 /**
  * Records click events off the request thread so a slow or failed analytics
- * write can't add latency to, or fail, the redirect response. Must live in a
- * separate bean from the caller: Spring's @Async proxy only applies across
- * bean boundaries, not to self-invoked methods on the same instance.
+ * write can't add latency to, or fail, the redirect response.
+ *
+ * <p>Deliberately an interface, not just {@link ClickAnalyticsRecorderImpl}
+ * directly: Spring's {@code @Async} proxy needs a bean boundary between
+ * caller and callee to apply (self-invocation on the same instance bypasses
+ * it), and mocking this in tests as an interface avoids Mockito's inline
+ * mock maker entirely — mocking a concrete class needs bytecode
+ * instrumentation via a self-attached Java agent, which some JDK/CI
+ * combinations refuse even with {@code -Djdk.attach.allowAttachSelf=true}.
+ * An interface mock is just a plain JDK dynamic proxy.
  */
-@Component
-public class ClickAnalyticsRecorder {
+public interface ClickAnalyticsRecorder {
 
-    private final ClickAnalyticsRepository clickAnalyticsRepository;
-
-    public ClickAnalyticsRecorder(ClickAnalyticsRepository clickAnalyticsRepository) {
-        this.clickAnalyticsRepository = clickAnalyticsRepository;
-    }
-
-    @Async
-    public void recordClick(Long shortUrlId, String referrer, String userAgent) {
-        clickAnalyticsRepository.save(new ClickAnalytics(shortUrlId, referrer, UserAgentParser.extractBrowserName(userAgent)));
-    }
+    void recordClick(Long shortUrlId, String referrer, String userAgent);
 }
